--- a/index.html
+++ b/index.html
@@ -213,6 +213,7 @@
         const loadingOverlay = document.getElementById('loading-overlay');
         const messageBox = document.getElementById('message-box');
         const messageContent = document.getElementById('message-content');
+        const apiKey = "AIzaSyB-C123456789abcdefghijklmnopqrstuvwxyz"
 
         let originalQuizData = []; // OCRから生成されたオリジナルのクイズデータ
         let quizData = []; // 現在のクイズデータを格納する配列 (シャッフルやフィルタリング後)
