--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>単語クイズアプリ</title>
+    <!-- 検索エンジンにインデックス登録させないためのメタタグ -->
+    <meta name="robots" content="noindex">
     <!-- Tailwind CSSを読み込み、モダンなデザインを適用します -->
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
